fix(swagger) : fix error 404 in swagger
